--- a/styles.css
+++ b/styles.css
@@ -194,8 +194,9 @@ body {
 }
 
 .education__degree {
-  font-weight: 700;
-  font-size: clamp(1.4rem, 2.4vw, 1.65rem);
+  font-family:'PT Serif', serif;
+  margin: 0;
+  font-size: clamp(2.25rem, 3.3vw, 3.3rem);
   line-height: 1;
 }
 
