--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,7 @@ body {
   padding-bottom: 4em;
 }
 .section--social .section__text {
-  grid-column: 2 / span 6;
+  grid-column: 1 / span 6;
 }
 
 .social {
@@ -398,7 +398,7 @@ body {
 }
 
 .section--social .section__media {
-  grid-column: 9 / -1;
+  grid-column: 3 / 7;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -540,9 +540,10 @@ body {
     height: clamp(6.5rem, 38vw, 8.75rem);;
     aspect-ratio: 1;
     left: inherit;
-    right: clamp(1.25rem, 0.5vw, 2.25rem);
+    /* right: clamp(1.25rem, 0.5vw, 2.25rem); */
     /* top: clamp(3.25rem, 19vw, 4.45rem); */
-    top:25%;
+    right:0;
+    top:7%;
     margin: 0;
     transform: translateY(-50%);
     z-index: 4;
@@ -554,5 +555,19 @@ body {
 
   .qr-preview {
     width: clamp(3rem, 30vw, 7rem);
+  }
+
+  /*.section--lead .section__media,*/
+  .section--lead .section__text {
+    grid-column: 2 / 6;
+  }
+
+  .section--lead .section__media {
+    grid-column: 1 / 7;
+    grid-row: 1;
+  }
+
+  .section--lead .section__text {
+    grid-row: 2;
   }
 }
