--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,10 @@ body {
   line-height: 1.15;
 }
 
+.hero__bio {
+  margin-top: clamp(1.5rem, 3vw, 2.25rem);
+}
+
 .placeholder {
   width: 100%;
   display: flex;
@@ -151,11 +155,11 @@ body {
   height: 1em;
 }
 .experience__body {
-  margin: 0;
+  margin:2em 0 0;
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
-  font-size: 1.3rem;
-  line-height: 1.65;
+  font-size: 1.2rem;
+  line-height: 1.35;
   color: var(--accent);
   max-width: 58ch;
   text-wrap: pretty;
